@@ -1,4 +1,5 @@
 0.02
+ - Add comments to TIEHASH tests.
  - Add tests for TIEHASH.
  - Add tests for Test::NoWarnings.
 
